# mcp_diptrace

./: .docs-roadmap-trigger  .gitattributes  .gitignore  README.md  README_RU.md  pyproject.toml  serializer-applied.tgz
.github/: serializer-reference.part0  serializer-reference.part1  serializer-reference.part2  serializer-reference.part3  serializer-reference.part4  serializer-reference.payload
.github/workflows/: apply-docs-roadmap.yml  apply-final-audit.yml  apply-fix.yml  (+9 more)
benchmarks/: benchmark_core.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOMAIN_MODEL.md  EXTERNAL_ADAPTERS.md  FIELD_SOLVER_PROTOCOL.md  GEOMETRY_ENGINE.md  IMPEDANCE_AND_SI.md  MCP_TOOLS.md  PLACEMENT_ENGINE.md  REVIEW_ENGINE.md  ROADMAP.md  ROUTING_ENGINE.md  SECURITY_AND_POLICY.md  SERIALIZER_REFERENCE.md  SKILL_CONTRACTS.md  TESTING.md  TRANSACTIONS.md  USAGE.md  USAGE_RU.md  XML_COMPATIBILITY.md
examples/: claude_desktop_config.json  codex-config.toml
plugin/: bridge_entry.py  build_bridge.ps1  install_plugin.ps1
scripts/: apply_ci_310_fix.py  apply_ci_semantic_fix.py  apply_final_prompt_audit.py  apply_serializer_reference.py  final_prompt_audit.patch  generate_pcb_skills.py  mcp_smoke.py
skills/: README.md  capability-map.json  catalog.json  dependency-contracts.json
tests/: test_advanced_review.py  test_connectivity.py  test_diptrace53_fixture_manifest.py  test_exports.py  test_foundation.py  test_geometry.py  test_inspector.py  test_libraries.py  test_models.py  test_multirouter.py  test_ngspice.py  test_openems.py  test_pattern_validation.py  test_phase4.py  test_placement.py  test_plugin_settings.py  test_policy.py  test_power_multilayer_fixture.py  test_prompt_acceptance.py  test_review.py  test_router.py  test_routing_4layer.py  test_routing_primitives.py  test_scaffolding.py  test_schematic_authoring.py  test_schematic_pcb_sync.py  test_serializer_reference.py  test_server.py  test_service.py  test_sessions.py  test_signal_integrity.py  test_silkscreen.py  test_skill_packages.py  test_spatial.py  test_specctra.py  test_trust_model.py  test_xml_document.py
(+419 files in other folders)
